--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ coreschema==0.0.4
 Django==4.2.1
 django-cors-headers==4.0.0
 djangorestframework==3.14.0
+djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.5
 idna==3.4
@@ -21,7 +22,7 @@ MarkupSafe==2.1.2
 mdurl==0.1.2
 packaging==23.1
 Pygments==2.15.1
-PyJWT==2.7.0
+PyJWT==1.7.1
 pytz==2023.3
 requests==2.31.0
 rich==13.4.1
