--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,25 @@
 absl-py==1.4.0
+amqp==5.1.1
 appdirs==1.4.4
 asgiref==3.7.2
 astunparse==1.6.3
+async-timeout==4.0.2
 audioread==3.0.0
 axios==0.4.0
 beautifulsoup4==4.12.2
+billiard==4.1.0
 blis==0.7.9
 boilerplate==1.2.4
 cachetools==5.3.1
 catalogue==2.0.8
+celery==5.3.1
 certifi==2023.5.7
 cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 confection==0.0.4
 coreapi==2.3.3
 coreschema==0.0.4
@@ -45,6 +52,7 @@ Jinja2==3.1.2
 joblib==1.2.0
 kenlm==0.1
 keras==2.12.0
+kombu==5.3.1
 langcodes==3.3.0
 langdetect==1.0.9
 lazy_loader==0.2
@@ -71,6 +79,7 @@ packaging==23.1
 pathy==0.10.1
 pooch==1.6.0
 preshed==3.0.8
+prompt-toolkit==3.0.38
 protobuf==4.23.3
 punctuator==0.9.6
 pyasn1==0.5.0
@@ -83,9 +92,11 @@ Pygments==2.15.1
 PyJWT==1.7.1
 pypinyin==0.49.0
 PySocks==1.7.1
+python-dateutil==2.8.2
 pytube==15.0.0
 pytz==2023.3
 PyYAML==6.0
+redis==4.6.0
 regex==2023.6.3
 requests==2.31.0
 requests-oauthlib==1.3.1
@@ -123,8 +134,11 @@ tqdm==4.65.0
 transformers==4.30.2
 typer==0.7.0
 typing_extensions==4.6.2
+tzdata==2023.3
 uritemplate==4.1.1
 urllib3==1.26.16
+vine==5.0.0
 wasabi==1.1.2
+wcwidth==0.2.6
 Werkzeug==2.3.6
 wrapt==1.14.1
