--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,15 +4,19 @@
   "proxy": "http://127.0.0.1:8000",
   "private": true,
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
+    "animate.css-react": "^1.1.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "jquery": "^3.7.0",
     "popper.js": "^1.16.1",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
+    "react-spring": "^9.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
